[workspace]
members = [
    "libquarkpan",
    "quarkpan",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
homepage = "https://github.com/niuhuan/quarkpan-rs"
repository = "https://github.com/niuhuan/quarkpan-rs"

[workspace.dependencies]
libquarkpan = { version = "0.1.0", path = "libquarkpan" }
