[package]
name = "quarkpan"
version = { workspace = true }
edition = "2024"
description = "Command-line client for Quark Drive based on libquarkpan"
license = "GPL-3.0-only"
readme = "README.md"
homepage = { workspace = true }
documentation = "https://docs.rs/quarkpan"
repository = { workspace = true }
keywords = ["quark", "quark-drive", "cli", "upload", "download"]
categories = ["command-line-utilities"]

[dependencies]
bytes = "1.10.1"
chrono = { version = "0.4", features = ["alloc"] }
clap = { version = "4.5.40", features = ["derive", "env", "wrap_help"] }
futures-util = "0.3.31"
indicatif = "0.17.11"
libquarkpan = { workspace = true }
md5 = "0.7.0"
owo-colors = "4.2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.0"
tokio = { version = "1.45.1", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.13", features = ["io"] }
